--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 /*//////////////////////////////////////////////////////////////////////////////
 ADS //////////////////////////////////////////////////////////////////////////*/
-.chitikaAdContainer {
+.adsbygoogle {
   position: absolute;
   bottom: 15px;
 }
